fix(java): 解决 Java 25 和 Netty 原生库兼容性问题
- 在 .env.example 中添加 JAVA_TOOL_OPTIONS 配置选项以启用原生访问
- 更新 README.md 添加关于 System.loadLibrary 警告的说明和解决方案
- 在 mcp-server 和 java 模块的 build.gradle 中统一配置 JVM 原生访问参数
- 为 Netty DNS 原生库添加 macOS ARM64 和 x86_64 架构支持
- 通过环境变量和 JVM 参数双重保障解决 IDE 运行时的原生库访问问题